# semantic_navigation

./: README.md
src/semantic_mapping/: CMakeLists.txt  package.xml
src/semantic_mapping/launch/: gmapping.rviz  semantic_mapping.rviz  semantic_mapping_full.launch  semantic_mapping_gmapping.launch
src/semantic_mapping/maps/: two_room_01.yaml  weird_01.yaml  workspace.yaml
src/voice_command/: CMakeLists.txt  package.xml
src/voice_command/config/: README.txt  location_dictionary.yaml  temp.txt  temp.txt~  test.py~  voice_commands.dic  voice_commands.lm  voice_commands.log_pronounce  voice_commands.sent  voice_commands.vocab
src/voice_command/launch/: voice_command.launch
src/voice_command/msg/: PosName.msg
src/voice_command/scripts/: command_comprehension.py  command_comprehension.py~  initialize_map.py  recieve_named_goal.py  update_location_dictionary.py  update_location_dictionary.py~
src/youbot_ros_tools/youbot_control/config/: youbot_control.yaml
src/youbot_ros_tools/youbot_gazebo/: example_goal_publish
src/youbot_ros_tools/youbot_gazebo/launch/: map_simulation.launch  youbot.launch
src/youbot_ros_tools/youbot_gazebo/worlds/: empty_room.world  (+1 more)
src/youbot_ros_tools/youbot_nav/: CMakeLists.txt  package.xml
src/youbot_ros_tools/youbot_nav/config/: costmap_params.yaml  eband_planner_params.yaml  global_costmap_params.yaml  semantic_navigation.yaml  semantic_navigation.yaml~  simple_move.yaml
src/youbot_ros_tools/youbot_nav/launch/: laser_filter.launch  move_base_eband.launch  move_base_eband_small.launch  semantic_mapping.launch  youbotnav.rviz
(+6 files in other folders)
