<?xml version="1.0"?>
<package>
  <name>youbot_nav</name>
  <version>0.0.0</version>
  <description>The youbot_nav package</description>
  <maintainer email="youbot@todo.todo">youbot</maintainer>


  <license>GPLv3</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>action_lib</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>base_local_planner</run_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>global_planner</run_depend>
  <run_depend>nav_core</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>eband_local_planner</run_depend>
  <run_depend>youbot_driver_ros_interface</run_depend>
  <run_depend>hokuyo_node</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>roscpp</run_depend>

</package>
